2003-07-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/template/jazz-combo.ly (drumNotes): 1.7 fixes 

2003-07-09  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/refman.itely: spelling fix.

2003-07-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/template/jazz-combo.ly: new file.

2003-07-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-toevallig.mf: tweak for bottom of flat sign. 
	lo-res fixes.

	* mf/feta-schrift.mf: bugfix in varcoda sign.
	WARNING: FONT CHANGED

	* lily/my-lily-lexer.cc (lookup_identifier): return SCM_UNDEFINED,
	in accordance with lexer.ll.   

2003-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely: Edit introduction.

2003-07-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/staff-symbol-referencer.cc (LY_DEFINE): add
	ly:grob-staff-position

2003-07-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/to-xml.scm: import srfi-1

	* VERSION (MAJOR_VERSION):  release 1.7.24

	* python/lilylib.py (make_ps_images): make multipage _really_ work.

	* scripts/lilypond-book.py (do_file): put texidoc before image.
	(TexiPaper.process_ly2dvi_block): make multipage _really_ work.

	* input/regression/*.ly: fix snippet octaves 

	* input/test/spanner-after-break-tweak.ly: import
	broken-spanner-adjustment

	* input/no-notation/midi-transposing.ly: move from input/test/

	* input/test/: remove chord-markup

	* input/regression/instrument-name-partial.ly: move from input/test.

	* input/test/vertical-text.ly: remove

	* ly/engraver-init.ly (LyricsVoiceContext): add more vertical
	space above lyrics lines.

	* input/test/uniform-breaking.ly: remove file.

	* lily/gourlay-breaking.cc (combine_demerits): add comment about
	uniform spacing density. 

	* input/test/chords.ly (keys): remove file.

	* scm/documentation-lib.scm (oop): use srfi-1 too.

	* input/regression/*.ly: add \version

	* Documentation/user/*.itely: various fixes.

	* buildscripts/mf-to-table.py (base): break table every three
	symbols.
